--- a/homepage.css
+++ b/homepage.css
@@ -7,8 +7,8 @@
     vertical-align: middle;
 }
 .center {
-  /*
-    width: 50%;
-    margin: 0 auto;
-    */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
